RESOLVED FIXED300279
Crash in WebProcessCache::evictAtRandomIfNeeded()
https://bugs.webkit.org/show_bug.cgi?id=300279
Summary Crash in WebProcessCache::evictAtRandomIfNeeded()
Ryosuke Niwa
Reported 2025-10-06 19:07:45 PDT
e.g. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKit 0x3039834c0 WTF::Ref<WebKit::WebProcessCache::CachedProcess, WTF::RawPtrTraits<WebKit::WebProcessCache::CachedProcess>, WTF::DefaultRefDerefTraits<WebKit::WebProcessCache::CachedProcess>>::operator->() const + 36 (Ref.h:135) 1 WebKit 0x3039838e0 WebKit::WebProcessCache::evictAtRandomIfNeeded() + 236 (WebProcessCache.cpp:196) 2 WebKit 0x303983318 WebKit::WebProcessCache::addProcess(WTF::Ref<WebKit::WebProcessCache::CachedProcess, WTF::RawPtrTraits<WebKit::WebProcessCache::CachedProcess>, WTF::DefaultRefDerefTraits<WebKit::WebProcessCache::CachedProcess>>&&) + 1792 (WebProcessCache.cpp:182) 3 WebKit 0x3039e83f4 WebKit::WebProcessCache::addProcessIfPossible(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&)::$_0::operator()(bool) const + 288 (WebProcessCache.cpp:141) 4 WebKit 0x3039e806c WTF::Detail::CallableWrapper<WebKit::WebProcessCache::addProcessIfPossible(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&)::$_0, void, bool>::call(bool) + 44 (Function.h:53) 5 WebKit 0x30010f8e8 WTF::Function<void (bool)>::operator()(bool) const + 196 (Function.h:82) 6 WebKit 0x3000fb398 WTF::CompletionHandler<void (bool)>::operator()(bool) + 160 (CompletionHandler.h:79) 7 WebKit 0x303a44160 WebKit::WebProcessProxy::isResponsive(WTF::CompletionHandler<void (bool)>&&)::$_1::operator()() + 192 (WebProcessProxy.cpp:2013) 8 WebKit 0x303a44000 WTF::Detail::CallableWrapper<WebKit::WebProcessProxy::isResponsive(WTF::CompletionHandler<void (bool)>&&)::$_1, void>::call() + 32 (Function.h:53) 9 WebKit 0x30005c444 WTF::Function<void ()>::operator()() const + 184 (Function.h:82) 10 WebKit 0x3000deafc WTF::CompletionHandler<void ()>::operator()() + 148 (CompletionHandler.h:79) 11 WebKit 0x30361fde4 WebKit::AuxiliaryProcessProxy::checkForResponsiveness(WTF::CompletionHandler<void ()>&&, WebKit::AuxiliaryProcessProxy::UseLazyStop)::$_0::operator()()::'lambda'()::operator()() + 120 (AuxiliaryProcessProxy.cpp:547) <rdar://162049943>
Attachments
Ryosuke Niwa
Comment 1 2025-10-06 19:10:12 PDT
EWS
Comment 2 2025-10-07 00:25:23 PDT
Committed 301117@main (cd134386b5e8): <https://commits.webkit.org/301117@main> Reviewed commits have been landed. Closing PR #51905 and removing active labels.
Ryosuke Niwa
Comment 3 2025-10-07 10:25:43 PDT
EWS
Comment 4 2025-10-07 11:46:55 PDT
Committed 301151@main (4701660cf0ad): <https://commits.webkit.org/301151@main> Reviewed commits have been landed. Closing PR #51951 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.