Crash in WebProcessCache::evictAtRandomIfNeeded() https://bugs.webkit.org/show_bug.cgi?id=300279

Reviewed by Ben Nham.

The bug was caused by WebProcessCache::evictAtRandomIfNeeded always assuming m_sharedProcessesPerSite
to be not empty, which isn't necessarily the case. Fixed the bug by adding isEmpty check. Also added
the same check for m_processesPerSite for extra robustness.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm

* Source/WebKit/UIProcess/WebProcessCache.cpp:
(WebKit::WebProcessCache::evictAtRandomIfNeeded):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, WebProcessCacheCrashWithZeroSharedProcess)):

Canonical link: https://commits.webkit.org/301117@main