Source/WebKit/UIProcess/WebProcessCache.cpp
@@ -189,22 +189,24 @@ bool WebProcessCache::addProcess(Ref<CachedProcess>&& cachedProcess)
 
 void WebProcessCache::evictAtRandomIfNeeded()
 {
-    while (size() >= capacity()) {
-        {
+    while (size() >= capacity() && (!m_sharedProcessesPerSite.isEmpty() || !m_processesPerSite.isEmpty())) {
+        if (!m_sharedProcessesPerSite.isEmpty()) {
             auto it = m_sharedProcessesPerSite.random();
             m_sharedProcessesPerSite.remove(it);
             WEBPROCESSCACHE_RELEASE_LOG("addProcess: Evicting shared process from WebProcess cache because capacity was reached", it->value->process().processID());
             if (size() < capacity())
                 break;
         }
-        auto it = m_processesPerSite.random();
-        if (RefPtr sharedProcess = m_sharedProcessesPerSite.take(it->key)) {
-            WEBPROCESSCACHE_RELEASE_LOG("addProcess: Evicting shared process from WebProcess cache because capacity was reached", it->value->process().processID());
-            if (size() < capacity())
-                break;
+        if (!m_processesPerSite.isEmpty()) {
+            auto it = m_processesPerSite.random();
+            if (RefPtr sharedProcess = m_sharedProcessesPerSite.take(it->key)) {
+                WEBPROCESSCACHE_RELEASE_LOG("addProcess: Evicting shared process from WebProcess cache because capacity was reached", it->value->process().processID());
+                if (size() < capacity())
+                    break;
+            }
+            WEBPROCESSCACHE_RELEASE_LOG("addProcess: Evicting process from WebProcess cache because capacity was reached", it->value->process().processID());
+            m_processesPerSite.remove(it);
         }
-        WEBPROCESSCACHE_RELEASE_LOG("addProcess: Evicting process from WebProcess cache because capacity was reached", it->value->process().processID());
-        m_processesPerSite.remove(it);
     }
 }
 
